opam-version: "1.2"
name: "ppx_cps"
version: "0.1.0"
maintainer: "iitalics"
authors: ["iitalics <milo@ccs.neu.edu>"]
homepage: ["https://github.com/iitalics/ppx_cps"]
dev-repo: ["git+https://github.com/iitalics/ppx_cps.git"]
build: [ "jbuilder" "build" "-p" name "-j" jobs ]
depends: [
  "jbuilder" { build }
  "ppxlib" { >= "0.3.0" }
  "ounit" { test }
]